// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component SearchPageHeader works fine. 1`] = `
<div
  className="wrapper-header"
>
  <div
    className="wrapper-header-background"
  >
    <div
      className="wrapper-header-content"
    >
      <h1
        className="wrapper-header-content-title"
      >
        Netflix Roulete
      </h1>
      <div
        className="wrapper-header-content-search"
      >
        <form
          className="search"
          onSubmit={[Function]}
        >
          <div
            className="search-top"
          >
            <h3
              className="search-top-title"
            >
              FIND YOUR MOVIE
            </h3>
            <input
              className="search-top-input"
              onChange={[Function]}
              value="query"
            />
          </div>
          <div
            className="search-bottom clearfix"
          >
            <p
              className="search-label"
            >
              SEARCH BY
            </p>
            <input
              className="search-button active"
              onClick={[Function]}
              type="button"
              value="TITLE"
            />
            <input
              className="search-button"
              onClick={[Function]}
              type="button"
              value="DIRECTOR"
            />
            <input
              className="search-submit"
              type="submit"
              value="SEARCH"
            />
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component SearchPageHeader works fine. 2`] = `
<div
  className="wrapper-header"
>
  <div
    className="wrapper-header-background"
  >
    <div
      className="wrapper-header-content"
    >
      <h1
        className="wrapper-header-content-title"
      >
        Netflix Roulete
      </h1>
      <div
        className="wrapper-header-content-search"
      >
        <form
          className="search"
          onSubmit={[Function]}
        >
          <div
            className="search-top"
          >
            <h3
              className="search-top-title"
            >
              FIND YOUR MOVIE
            </h3>
            <input
              className="search-top-input"
              onChange={[Function]}
              value="query changed"
            />
          </div>
          <div
            className="search-bottom clearfix"
          >
            <p
              className="search-label"
            >
              SEARCH BY
            </p>
            <input
              className="search-button"
              onClick={[Function]}
              type="button"
              value="TITLE"
            />
            <input
              className="search-button active"
              onClick={[Function]}
              type="button"
              value="DIRECTOR"
            />
            <input
              className="search-submit"
              type="submit"
              value="SEARCH"
            />
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
